# moderac

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE
frontend/: index.html  package-lock.json  package.json
frontend/public/: skill.md
frontend/src/: App.tsx  main.tsx
frontend/src/assets/: app.css
frontend/src/components/: SiteFooter.tsx  SiteHeader.tsx
frontend/src/lib/: api.ts  auth-client.ts
frontend/src/pages/: ApiKeys.tsx  Dashboard.tsx  Landing.tsx  ProjectDetail.tsx  RunDetail.tsx  SignIn.tsx  TestEditor.tsx  TestRuns.tsx
migrations/: 001_init.sql
sdk/: Cargo.toml  README.md
sdk/src/: client.rs  help.rs  lib.rs  local.rs  main.rs  types.rs
src/: config.rs  db.rs  eval.rs  main.rs
src/handlers/: api_keys.rs  auth.rs  mod.rs  projects.rs  public_api.rs  runs.rs  tests.rs
