[package]
name = "moderac"
version = "0.1.1"
edition = "2021"
description = "Prompt-based testing for the AI agent era"
license = "MIT"
repository = "https://github.com/moderac/moderac"
keywords = ["testing", "ai", "prompts", "llm"]
categories = ["development-tools::testing"]

[[bin]]
name = "moderac"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
glob = "0.3"
colored = "2"
